
Version 5.0.5 (unreleased)
==========================

Bug fixes
---------

- Fix launch of convergence tracking graphical tool when using Qt5.

- Fix issue #239 relative to cooling tower module run in parallel.

- When importing CGNS files and requiring additional groups for mesh
  sections or zones, do not try to build boundary face groups based
  on vertex boundary conditions; fixes crash in this combination.

- Salome_CFD: symbolic link files bug fixed.

Release 5.0.4 (Aug 24 2017)
===========================

Bug fixes
---------

- Several fixes in CFD_STUDY Salome module's interactive behavior.

- Fix broken path in update feature of studymanager.

- Fix possible crash or error when computing wall distance for 2D
  (single cell layer) meshes.

- Fix bug in the implicit part of the user momentum source terms when
  this matrix is not symmetric.

- Fix bug in rough wall function (when iwallf != 2 and when using DRSM
  turbulence models)

- Avoid logging info for an extra boundary zone for radiation module.

- Fix crash in matrix assembler (used by CDO) in rare cases where some
  ranks are associated with no locla matrix rows.

- Fix crash in Catalyst output when visualizing tensor data on cells.

- Fix postprocessing output name of volume zone ids (appeared as boundary).

- Fix crash in quality criteria mode when Lagrangian module is active.

- GUI with Lagrangian module: fix for reading of inlet particle velocity
  when prescribed values are set.

- Fixes for handling of coupled RSM (irijco=1) with GUI settings

- Fix some spurious warning messages relative to number of sweeps
  and extended neighborhood reduction when using LES.

- Lagrangian module: fix characteristic time using temperature.

- Fix for issue #236 (crash on restart using periodicity).

- Major fix for coupled Rij solver (irijico = 1).

- Ensure field domain is filled in with cases basename
  in coupling parameters script when creating a coupled study.
