@@ -2,6 +2,14 @@
 Version 5.0.5 (unreleased)
 ==========================
 
+User changes
+------------
+
+- GUI: enable "separate meshes" writer option (already available
+  through user functions) through the GUI. This option allows for
+  separate sub-writers being used for each associated mesh (avoiding
+  the frequent need for the "Separate Blocks" operation in ParaView).
+
 Bug fixes
 ---------
 
